menambahkan produk pada footer dan mencoret 55k pada modal box

--- a/style.css
+++ b/style.css
@@ -379,7 +379,7 @@ body {
   font-weight: bold;
 }
 
-.products .product-price span {
+.product-price span {
   text-decoration: line-through;
   font-weight: lighter;
 }
