--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #b6895b;
+  --primary: #dd2628;
   --bg: hsl(0, 0%, 0%);
 }
 
@@ -18,8 +18,8 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: var(--bg);
-  color: #fff;
+  background-color: #fff;
+  color: var(--bg);
 }
 
 /* Navbar */
@@ -28,7 +28,9 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 1.4rem 7%;
-  background-color: rgb(1, 1, 1, 0.8);
+  background-color: rgb(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   border-bottom: 1px solid #513c28;
   position: fixed;
   top: 0;
@@ -48,14 +50,14 @@ body {
 }
 
 .navbar .navbar-nav a {
-  color: #fff;
+  color: var(--primary);
   display: inline-block;
   font-size: 1.2rem;
   margin: 0 1rem;
 }
 
 .navbar .navbar-nav a:hover {
-  color: var(--primary);
+  color: var(--bg);
 }
 
 .navbar .navbar-nav a::after {
@@ -72,7 +74,7 @@ body {
 }
 
 .navbar .navbar-extra a {
-  color: #fff;
+  color: var(--primary);
   margin: 0 0.5rem;
 }
 
@@ -174,7 +176,7 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background-image: url(img/bg.jpg);
+  background-image: url(img/bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -188,7 +190,7 @@ body {
   width: 100%;
   height: 30%;
   bottom: 0;
-  background: linear-gradient(0deg, rgba(1, 1, 3, 1) 8%, rgba(255, 255, 255, 0) 50%);
+  background: linear-gradient(0deg, rgb(255, 255, 255) 8%, rgba(185, 185, 185, 0) 50%);
 }
 
 .hero .content {
@@ -208,12 +210,12 @@ body {
 }
 
 .hero .content p {
+  color: #fff;
   font-size: 1.6rem;
   margin-top: 1rem;
   line-height: 1.4;
-  font-weight: 100;
+  font-weight: 300;
   text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
-  mix-blend-mode: difference;
 }
 
 .hero .content .cta {
@@ -257,6 +259,7 @@ body {
 
 .about .row .about-img {
   flex: 1 1 45rem;
+  margin-right: 5rem;
 }
 
 .about .row .about-img img {
@@ -276,7 +279,7 @@ body {
 .about .row .content p {
   margin-bottom: 0.8rem;
   font-size: 1.4rem;
-  font-weight: 100;
+  font-weight: 300;
   line-height: 1.6;
 }
 
@@ -291,8 +294,9 @@ body {
   text-align: center;
   max-width: 30rem;
   margin: auto;
-  font-weight: 100;
+  font-weight: 300;
   line-height: 1.6;
+  font-size: 1.4rem;
 }
 
 .menu .row {
@@ -308,7 +312,8 @@ body {
 
 .menu .row .menu-card img {
   border-radius: 50%;
-  width: 80%;
+  margin: 0 1rem;
+  width: 240px;
 }
 
 .menu .row .menu-card .menu-card-title {
@@ -338,7 +343,7 @@ body {
 .products .product-icons a {
   width: 4rem;
   height: 4rem;
-  color: #fff;
+  color: var(--primary);
   margin: 0.3rem;
   border: 1px solid #666;
   border-radius: 50%;
@@ -349,6 +354,7 @@ body {
 
 .products .product-icons a:hover {
   background-color: var(--primary);
+  color: #fff;
   border: 1px solid var(--primary);
 }
 
@@ -388,7 +394,7 @@ body {
 .contact .row {
   display: flex;
   margin-top: 2rem;
-  background-color: #222;
+  background-color: var(--primary);
 }
 
 .contact .row .map {
@@ -407,7 +413,7 @@ body {
   display: flex;
   align-items: center;
   margin-top: 2rem;
-  background-color: var(--bg);
+  background-color: #fff;
   border: 1px solid #eee;
   padding-left: 2rem;
 }
@@ -425,8 +431,8 @@ body {
   display: inline-block;
   padding: 1rem 3rem;
   font-size: 1.7rem;
-  color: #fff;
-  background-color: var(--primary);
+  color: var(--primary);
+  background-color: #fff;
   cursor: pointer;
 }
 
@@ -463,10 +469,11 @@ footer .links a {
 
 footer .credit {
   font-size: 1rem;
+  color: #fff;
 }
 
 footer .credit a {
-  color: var(--bg);
+  color: #fff;
   font-weight: 700;
 }
 
