--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ body {
 }
 
 .hero .content h1 {
-  font-size: 5em;
+  font-size: 5rem;
   color: #fff;
   text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
   line-height: 1.2;
